# noclockscli

./: .editorconfig  CHANGELOG.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/reference/: add.md  hello.md
docs/static/: site.webmanifest
docs/static/styles/: extra.css
src/noclockscli/: __main__.py  commands.py
tests/: test_hello.py  test_help.py
