[tool.poetry]
name = "noclockscli"
version = "0.1.0"
description = "No Clocks Command Line Interface"
authors = ["Jimmy Briggs <jimmy.briggs@jimbrig.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "noclockscli", from = "src" },
]

[tool.poetry.scripts]
noclockscli = "noclockscli.__main__:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyinstaller = "^6.4.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
setuptools = "^69.1.1"
autoflake = "^2.3.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.12"
pymdown-extensions = "^10.7"
fontawesome-markdown = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
exclude = '''
(
    /(
        \.git
        | \.pytest_cache
        | .venv
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | build
        | dist
    )/
)
'''

[tool.isort]
line_length = 79
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/.venv/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
